v1.0.5/classification/mapping-room-name-to-activity.md
# Room name to space activity mapping

Source: [`abstract-room-name-to-space-activity.mapping.ttl`](sources/mapping-room-name-to-activity.ttl)

External target labels are not shipped in this repository; only codes and IRIs are shown.

## Dataset

- **description (de):** Ordnet jede normalisierte Raumbezeichnung einer oder mehreren Raumaktivitaetsklassen zu. Der primaere Aktivitaetscode steht zuerst. Regenerieren mit scripts/generate_room_name_vocabulary.py.
- **description (en):** Maps each normalized room name to one or more building space activity classes. Primary activity code is listed first. Regenerate with scripts/generate_room_name_vocabulary.py.
- **title (de):** Mapping abstrakter Raumbezeichnungen zur Raumaktivitaetsklassifikation
- **title (en):** Abstract room name to space activity mapping

## Links

| Source | Relation | Targets |
| --- | --- | --- |
| `rn:RN-CIR-COR` | `mapsToActivity` | `abs:S-CIR-HOR` |
| `rn:RN-CIR-ELV` | `mapsToActivity` | `abs:S-CIR-VRT-MEC` |
| `rn:RN-CIR-LOB` | `mapsToActivity` | `abs:S-CIR-HOR` |
| `rn:RN-CIR-RAM` | `mapsToActivity` | `abs:S-CIR-VRT-MAN` |
| `rn:RN-CIR-SLU` | `mapsToActivity` | `abs:S-CIR-HOR` |
| `rn:RN-CIR-STR` | `mapsToActivity` | `abs:S-CIR-VRT-MAN` |
| `rn:RN-CIR-VES` | `mapsToActivity` | `abs:S-CIR-HOR` |
| `rn:RN-COM-BAR` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-CAF` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-CUS` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-EXH` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-FOD` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-HTL` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-KSK` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-RET` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-RST` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-COM-SAL` | `mapsToActivity` | `abs:M-COM` |
| `rn:RN-HLC-EXM` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-IMG` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-LAB` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-NRS` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-OR` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-PAT` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-PRM` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-RCV` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-TRT` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HLC-WTR` | `mapsToActivity` | `abs:M-HEL` |
| `rn:RN-HYG-CHG` | `mapsToActivity` | `abs:S-HYG-SHW` |
| `rn:RN-HYG-LCK` | `mapsToActivity` | `abs:S-STO-LCK` |
| `rn:RN-HYG-SHW` | `mapsToActivity` | `abs:S-HYG-SHW` |
| `rn:RN-HYG-WC-F` | `mapsToActivity` | `abs:S-HYG-WC-F` |
| `rn:RN-HYG-WC-IV` | `mapsToActivity` | `abs:S-HYG-WC-IV` |
| `rn:RN-HYG-WC-M` | `mapsToActivity` | `abs:S-HYG-WC-M` |
| `rn:RN-HYG-WC-MIX` | `mapsToActivity` | `abs:S-HYG-WC-MIX` |
| `rn:RN-IND-ASM` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-CLN` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-LDK` | `mapsToActivity` | `abs:S-PRK-SVC` |
| `rn:RN-IND-MNT` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-PKG` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-PRD` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-QC` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-WHS` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-WRK` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-IND-YRD` | `mapsToActivity` | `abs:M-WRK-PRD` |
| `rn:RN-LRN-ART` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-AUS` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-CLS` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-CMP` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-LCT` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-LIB` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-SCI` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-SEM` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-STU` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-LRN-WRK` | `mapsToActivity` | `abs:M-LRN` |
| `rn:RN-OUT-BLN` | `mapsToActivity` | `abs:O` |
| `rn:RN-OUT-CWK` | `mapsToActivity` | `abs:O-CIR-PED` |
| `rn:RN-OUT-EBL` | `mapsToActivity` | `abs:O-CIR-PED` |
| `rn:RN-OUT-GDN` | `mapsToActivity` | `abs:O-GRN-GDN` |
| `rn:RN-OUT-GRN` | `mapsToActivity` | `abs:O-GRN-GDN` |
| `rn:RN-OUT-PAT` | `mapsToActivity` | `abs:O` |
| `rn:RN-OUT-PLY` | `mapsToActivity` | `abs:O-GRN-REC` |
| `rn:RN-OUT-PRT` | `mapsToActivity` | `abs:O-CIR-PED` |
| `rn:RN-OUT-RD` | `mapsToActivity` | `abs:O-CIR-RD` |
| `rn:RN-OUT-RTN` | `mapsToActivity` | `abs:O-GRN-REC` |
| `rn:RN-OUT-RTR` | `mapsToActivity` | `abs:O` |
| `rn:RN-OUT-RWM` | `mapsToActivity` | `abs:O-TEC` |
| `rn:RN-OUT-SPL` | `mapsToActivity` | `abs:O-GRN-REC` |
| `rn:RN-OUT-STR` | `mapsToActivity` | `abs:O-CIR-PED` |
| `rn:RN-OUT-TEQ` | `mapsToActivity` | `abs:O-TEC` |
| `rn:RN-OUT-TRR` | `mapsToActivity` | `abs:O` |
| `rn:RN-PRK-EXT-BIK` | `mapsToActivity` | `abs:S-PRK-EXT` |
| `rn:RN-PRK-EXT-CAR` | `mapsToActivity` | `abs:S-PRK-EXT` |
| `rn:RN-PRK-EXT-MTO` | `mapsToActivity` | `abs:S-PRK-EXT` |
| `rn:RN-PRK-EXT-TRK` | `mapsToActivity` | `abs:S-PRK-EXT` |
| `rn:RN-PRK-INT-BIK` | `mapsToActivity` | `abs:S-PRK-INT` |
| `rn:RN-PRK-INT-CAR` | `mapsToActivity` | `abs:S-PRK-INT` |
| `rn:RN-PRK-INT-MTO` | `mapsToActivity` | `abs:S-PRK-INT` |
| `rn:RN-PRK-INT-TRK` | `mapsToActivity` | `abs:S-PRK-INT` |
| `rn:RN-RES-APT` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-BED` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-BTH` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-CEL` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-CLO` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-DIN` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-ENT` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-ETR` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-GNG` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-GST` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-KIT` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-LAU` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-LIV` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-STU` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-RES-UTL` | `mapsToActivity` | `abs:M-RES` |
| `rn:RN-STO-ARC` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-CHM` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-COL` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-EQP` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-GEN` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-HAZ` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-JAN` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-LAB` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-MAL` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-SMP` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-SUP` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-STO-ULD` | `mapsToActivity` | `abs:S-STO-GEN` |
| `rn:RN-TEC-BOI` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-CHL` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-COM` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-ELC` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-GEN` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-HVC` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-MMR` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-PMP` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-SPR` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-SRV` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-TRA` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-TEC-WST` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-VOI-MCH` | `mapsToActivity` | `abs:S-VOI-PLN` |
| `rn:RN-VOI-PLN` | `mapsToActivity` | `abs:S-VOI-PLN` |
| `rn:RN-VOI-RIS` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-VOI-SHA` | `mapsToActivity` | `abs:S-TEC` |
| `rn:RN-WRK-BRK` | `mapsToActivity` | `abs:M-WRK-KNW` |
| `rn:RN-WRK-CNF` | `mapsToActivity` | `abs:M-WRK-KNW` |
| `rn:RN-WRK-MTG` | `mapsToActivity` | `abs:M-WRK-KNW` |
| `rn:RN-WRK-OFF` | `mapsToActivity` | `abs:M-WRK-KNW` |
| `rn:RN-WRK-OPN` | `mapsToActivity` | `abs:M-WRK-KNW` |
| `rn:RN-WRK-REC` | `mapsToActivity` | `abs:M-WRK-KNW` |
